修改知识库相关内容