@@ -14,13 +14,10 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.caobolun.business.audit.constant.BizChangeBizType;
 import com.caobolun.business.audit.constant.BizChangeOperationType;
 import com.caobolun.business.audit.support.BizChangeLogContext;
-import com.caobolun.business.core.chunk.ChunkingMode;
-import com.caobolun.business.core.chunk.ChunkingOptions;
-import com.caobolun.business.core.chunk.StructuredChunkingService;
-import com.caobolun.business.core.chunk.VectorChunk;
-import com.caobolun.business.core.ingest.embed.ChunkEmbeddingService;
-import com.caobolun.business.core.parse.*;
-import com.caobolun.business.core.parse.model.ParsedDocument;
+import com.caobolun.business.core.chunk.model.EmbeddedChunk;
+import com.caobolun.business.core.ingest.*;
+import com.caobolun.business.core.ingest.sink.ChunkIndexWriter;
+import com.caobolun.business.core.parse.registry.ParserRegistry;
 import com.caobolun.business.ingestion.domain.context.IngestionContext;
 import com.caobolun.business.ingestion.domain.pipeline.PipelineDefinition;
 import com.caobolun.business.ingestion.engine.IngestionEngine;
@@ -36,20 +33,20 @@ import com.caobolun.business.knowledge.enums.DocumentStatus;
 import com.caobolun.business.knowledge.enums.ProcessMode;
 import com.caobolun.business.knowledge.enums.SourceType;
 import com.caobolun.business.knowledge.handler.RemoteFileFetcher;
-import com.caobolun.business.knowledge.schedule.CronScheduleHelper;
 import com.caobolun.business.knowledge.mapper.KnowledgeBaseMapper;
 import com.caobolun.business.knowledge.mapper.KnowledgeChunkMapper;
 import com.caobolun.business.knowledge.mapper.KnowledgeDocumentChunkLogMapper;
 import com.caobolun.business.knowledge.mapper.KnowledgeDocumentMapper;
 import com.caobolun.business.knowledge.mq.event.KnowledgeDocumentChunkEvent;
-import com.caobolun.business.knowledge.request.KnowledgeChunkCreateRequest;
 import com.caobolun.business.knowledge.request.KnowledgeDocumentPageRequest;
 import com.caobolun.business.knowledge.request.KnowledgeDocumentUpdateRequest;
 import com.caobolun.business.knowledge.request.KnowledgeDocumentUploadRequest;
+import com.caobolun.business.knowledge.schedule.CronScheduleHelper;
 import com.caobolun.business.knowledge.service.KnowledgeChunkService;
 import com.caobolun.business.knowledge.service.KnowledgeDocumentScheduleService;
 import com.caobolun.business.knowledge.service.KnowledgeDocumentService;
-import com.caobolun.business.knowledge.vo.KnowledgeChunkVO;
+import com.caobolun.business.knowledge.support.IngestionSpecCodec;
+import com.caobolun.business.knowledge.support.VectorTargetResolver;
 import com.caobolun.business.knowledge.vo.KnowledgeDocumentChunkLogVO;
 import com.caobolun.business.knowledge.vo.KnowledgeDocumentSearchVO;
 import com.caobolun.business.knowledge.vo.KnowledgeDocumentVO;
@@ -57,10 +54,11 @@ import com.caobolun.business.rag.core.vector.VectorSpaceId;
 import com.caobolun.business.rag.core.vector.VectorStoreService;
 import com.caobolun.business.rag.dto.StoredFileDTO;
 import com.caobolun.business.rag.service.FileStorageService;
+import com.caobolun.business.rag.util.DisplayType;
 import com.caobolun.framework.context.UserContext;
 import com.caobolun.framework.exception.ClientException;
+import com.caobolun.framework.exception.ServiceException;
 import com.caobolun.framework.mq.producer.MessageQueueProducer;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.mzt.logapi.starter.annotation.LogRecord;
 import lombok.RequiredArgsConstructor;
@@ -83,8 +81,10 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
 
     private final KnowledgeBaseMapper knowledgeBaseMapper;
     private final KnowledgeDocumentMapper documentMapper;
-    private final DocumentParserSelector parserSelector;
-    private final StructuredChunkingService structuredChunkingService;
+    private final ParserRegistry parserRegistry;
+    private final IngestionKernel ingestionKernel;
+    private final ChunkIndexWriter chunkIndexWriter;
+    private final IngestionSpecCodec ingestionSpecCodec;
     private final FileStorageService fileStorageService;
     private final VectorStoreService vectorStoreService;
     private final KnowledgeChunkService knowledgeChunkService;
@@ -93,13 +93,13 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
     private final IngestionPipelineService ingestionPipelineService;
     private final IngestionPipelineMapper ingestionPipelineMapper;
     private final IngestionEngine ingestionEngine;
-    private final ChunkEmbeddingService chunkEmbeddingService;
     private final KnowledgeDocumentChunkLogMapper chunkLogMapper;
     private final KnowledgeChunkMapper chunkMapper;
     private final TransactionOperations transactionOperations;
     private final MessageQueueProducer messageQueueProducer;
     private final KnowledgeScheduleProperties scheduleProperties;
     private final RemoteFileFetcher remoteFileFetcher;
+    private final VectorTargetResolver vectorTargetResolver;
     private final BizChangeLogContext bizChangeLogContext;
 
     @Value("knowledge-document-chunk_topic${unique-name:}")
@@ -121,13 +121,15 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
 
         SourceType sourceType = SourceType.normalize(requestParam.getSourceType());
         validateSourceAndSchedule(sourceType, requestParam);
+        // 摄取配置的校验排在存文件之前：它只看请求参数，而一旦落了对象再抛异常，
+        // 存储里就留下一个没有文档指向它的孤儿。纯校验一律前置到第一个副作用之前
+        ProcessModeConfig modeConfig = resolveProcessModeConfig(requestParam);
         StoredFileDTO stored = resolveStoredFile(kbDO.getCollectionName(), sourceType, requestParam.getSourceLocation(), file);
         // 前置拦截：与分块阶段同一套 MIME 路由，无解析器的类型直接拒绝，不落库不发 MQ
-        if (parserSelector.selectByMimeType(stored.getMimeType()) == null) {
+        if (!parserRegistry.canParse(stored.getMimeType())) {
             fileStorageService.deleteByUrl(stored.getUrl());
             throw new ClientException("暂不支持的文件类型：" + stored.getDetectedType());
         }
-        ProcessModeConfig modeConfig = resolveProcessModeConfig(requestParam);
 
         KnowledgeDocumentDO documentDO = KnowledgeDocumentDO.builder()
                 .kbId(kbId)
@@ -136,6 +138,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
                 .chunkCount(0)
                 .fileUrl(stored.getUrl())
                 .fileType(stored.getDetectedType())
+                .mimeType(stored.getMimeType())
                 .fileSize(stored.getSize())
                 .status(DocumentStatus.PENDING.getCode())
                 .sourceType(sourceType.getValue())
@@ -143,8 +146,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
                 .scheduleEnabled(isScheduleEnabled(sourceType, requestParam) ? 1 : 0)
                 .scheduleCron(isScheduleEnabled(sourceType, requestParam) ? StrUtil.trimToNull(requestParam.getScheduleCron()) : null)
                 .processMode(modeConfig.processMode().getValue())
-                .chunkStrategy(modeConfig.chunkingMode() != null ? modeConfig.chunkingMode().getValue() : null)
-                .chunkConfig(modeConfig.chunkConfig())
+                .ingestionSpec(modeConfig.ingestionSpec())
                 .pipelineId(modeConfig.pipelineId())
                 .createdBy(UserContext.getUsername())
                 .updatedBy(UserContext.getUsername())
@@ -153,7 +155,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
         bizChangeLogContext.put(String.valueOf(documentDO.getId()), null, documentDO);
         bizChangeLogContext.putName(documentDO.getDocName());
 
-        return BeanUtil.toBean(documentDO, KnowledgeDocumentVO.class);
+        return toVO(documentDO);
     }
 
     @Override
@@ -218,12 +220,16 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
     private void runChunkTask(KnowledgeDocumentDO documentDO) {
         String docId = documentDO.getId();
         ProcessMode processMode = ProcessMode.normalize(documentDO.getProcessMode());
+        KnowledgeBaseDO kbDO = knowledgeBaseMapper.selectById(documentDO.getKbId());
+        VectorTarget target = vectorTargetResolver.resolve(kbDO);
+        IngestionSpec spec = ingestionSpecCodec.read(documentDO.getIngestionSpec());
+        DocumentRef doc = documentRef(documentDO);
 
         KnowledgeDocumentChunkLogDO chunkLog = KnowledgeDocumentChunkLogDO.builder()
                 .docId(docId)
                 .status(DocumentStatus.RUNNING.getCode())
                 .processMode(processMode.getValue())
-                .chunkStrategy(documentDO.getChunkStrategy())
+                .parseProfile(spec.parseProfile().getCode())
                 .pipelineId(documentDO.getPipelineId())
                 .startTime(new Date())
                 .build();
@@ -236,24 +242,30 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
         long persistDuration = 0;
 
         try {
-            List<VectorChunk> chunkResults;
+            // 管道模式暂停服务：管道将按自定义代码 / 动态脚本重新设计，届时分块沿用同一内核，
+            // 下面这段连同 runPipelineProcess 一并重写。此处显式失败，不静默改用默认分块配置
             if (ProcessMode.PIPELINE == processMode) {
-                long start = System.currentTimeMillis();
-                chunkResults = runPipelineProcess(documentDO);
-                chunkDuration = System.currentTimeMillis() - start;
-            } else {
-                ChunkProcessResult result = runChunkProcess(documentDO);
-                extractDuration = result.extractDuration();
-                chunkDuration = result.chunkDuration();
-                embedDuration = result.embedDuration();
-                chunkResults = result.chunks();
+                // long start = System.currentTimeMillis();
+                // List<EmbeddedChunk> chunks = runPipelineProcess(documentDO, kbDO, target);
+                // chunkDuration = System.currentTimeMillis() - start;
+                //
+                // long persistStart = System.currentTimeMillis();
+                // chunkIndexWriter.replaceDocument(target, doc, chunks);
+                // persistDuration = System.currentTimeMillis() - persistStart;
+                // savedCount = chunks.size();
+                throw new ClientException("管道模式重构中，暂不可用，请改用直接分块：docId=" + docId);
             }
 
-            long persistStart = System.currentTimeMillis();
-            String collectionName = resolveCollectionName(documentDO.getKbId());
-            int savedCount = persistChunksAndVectorsAtomically(collectionName, docId, chunkResults);
-            persistDuration = System.currentTimeMillis() - persistStart;
+            IngestionOutcome outcome = ingestionKernel.run(doc, readFileBytes(documentDO), spec, target);
+            extractDuration = outcome.timings().parseMillis();
+            chunkDuration = outcome.timings().chunkMillis();
+            embedDuration = outcome.timings().embedMillis();
+            persistDuration = outcome.timings().indexMillis();
+            int savedCount = outcome.chunkCount();
+            // 回填字节探测出的真实 MIME；展示用的 file_type 仍由扩展名决定，两者互不导出
+            refreshMimeType(docId, outcome.mimeType());
 
+            markChunkSucceeded(docId, savedCount);
             long totalDuration = System.currentTimeMillis() - totalStartTime;
             updateChunkLog(chunkLog.getId(), DocumentStatus.SUCCESS.getCode(), savedCount,
                     extractDuration, chunkDuration, embedDuration, persistDuration, totalDuration, null);
@@ -266,30 +278,32 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
         }
     }
 
-    private int persistChunksAndVectorsAtomically(String collectionName, String docId, List<VectorChunk> chunkResults) {
-        List<KnowledgeChunkCreateRequest> chunks = chunkResults.stream()
-                .map(vc -> {
-                    KnowledgeChunkCreateRequest req = new KnowledgeChunkCreateRequest();
-                    req.setChunkId(vc.getChunkId());
-                    req.setIndex(vc.getIndex());
-                    req.setContent(vc.getContent());
-                    return req;
-                })
-                .toList();
-        transactionOperations.executeWithoutResult(status -> {
-            knowledgeChunkService.deleteByDocId(docId);
-            knowledgeChunkService.batchCreate(docId, chunks);
-            vectorStoreService.deleteDocumentVectors(collectionName, docId);
-            vectorStoreService.indexDocumentChunks(collectionName, docId, chunkResults);
-            KnowledgeDocumentDO updateDocumentDO = KnowledgeDocumentDO.builder()
-                    .id(docId)
-                    .chunkCount(chunks.size())
-                    .status(DocumentStatus.SUCCESS.getCode())
-                    .updatedBy(UserContext.getUsername())
-                    .build();
-            documentMapper.updateById(updateDocumentDO);
-        });
-        return chunks.size();
+    private DocumentRef documentRef(KnowledgeDocumentDO documentDO) {
+        return new DocumentRef(documentDO.getId(), documentDO.getKbId(), documentDO.getDocName());
+    }
+
+    private void markChunkSucceeded(String docId, int chunkCount) {
+        documentMapper.updateById(KnowledgeDocumentDO.builder()
+                .id(docId)
+                .chunkCount(chunkCount)
+                .status(DocumentStatus.SUCCESS.getCode())
+                .updatedBy(UserContext.getUsername())
+                .build());
+    }
+
+    private void refreshMimeType(String docId, String mimeType) {
+        if (!StringUtils.hasText(mimeType)) {
+            return;
+        }
+        documentMapper.updateById(KnowledgeDocumentDO.builder().id(docId).mimeType(mimeType).build());
+    }
+
+    private byte[] readFileBytes(KnowledgeDocumentDO documentDO) {
+        try (InputStream is = fileStorageService.openStream(documentDO.getFileUrl())) {
+            return is.readAllBytes();
+        } catch (Exception e) {
+            throw new ServiceException("读取文件内容失败：docId=" + documentDO.getId());
+        }
     }
 
     private void updateChunkLog(String logId, String status, int chunkCount, long extractDuration,
@@ -310,90 +324,15 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
         chunkLogMapper.updateById(update);
     }
 
-    /**
-     * 使用分块策略处理文档，失败直接抛异常，由 runChunkTask 统一处理错误状态
-     * 4 阶段中的前 3 阶段：Extract → Chunk → Embed
-     */
-    private ChunkProcessResult runChunkProcess(KnowledgeDocumentDO documentDO) {
-        ChunkingMode chunkingMode = ChunkingMode.fromValue(documentDO.getChunkStrategy());
-        KnowledgeBaseDO kbDO = knowledgeBaseMapper.selectById(documentDO.getKbId());
-        String embeddingModel = kbDO.getEmbeddingModel();
-        Map<String, Object> rawConfig = parseChunkConfig(documentDO.getChunkConfig());
-        ChunkingOptions config = chunkingMode.createOptions(rawConfig);
-        // 表格 block-aware 行上限（自由键，缺省走 TableChunker 默认）
-        Integer rowsPerChunk = readInt(rawConfig);
-
-        long extractStart = System.currentTimeMillis();
-
-        // 读出全量字节(与 runPipelineProcess 一致)，用于 MIME 探测 + parseStructured
-        byte[] fileBytes;
-        try (InputStream is = fileStorageService.openStream(documentDO.getFileUrl())) {
-            fileBytes = is.readAllBytes();
-        } catch (Exception e) {
-            throw new RuntimeException("读取文件内容失败：docId=" + documentDO.getId(), e);
-        }
-
-        if (fileBytes.length == 0) {
-            throw new RuntimeException("文件内容为空：docId=" + documentDO.getId());
-        }
-        try {
-            // 按 MIME 路由(与 PIPELINE/ParserNode 同一套规则)：PDF/Word/PPT 命中 MinerU，不再硬编码 Tika
-            String docName = documentDO.getDocName();
-            String mimeType = MimeTypeDetector.detect(fileBytes, docName);
-            if (mimeType == null) {
-                throw new RuntimeException("无法识别文件 MIME 类型：docId=" + documentDO.getId() + ", docName=" + docName);
-            }
-
-            DocumentParser parser = parserSelector.selectByMimeType(mimeType);
-            if (parser == null) {
-                throw new RuntimeException("未找到 MIME [" + mimeType + "] 对应的解析器,docId=" + documentDO.getId());
-            }
-            // Excel 默认命中 POI 简单 key-val；用户在配置里选了 mineru 则切到 MinerU 复杂版面解析
-            if (ParserType.EXCEL_POI.getType().equals(parser.getParserType())
-                    && "mineru".equalsIgnoreCase(readString(rawConfig))) {
-                DocumentParser mineru = parserSelector.select(ParserType.MINERU.getType());
-                if (mineru != null) {
-                    parser = mineru;
-                }
-            }
-            log.info("文档分块-文本提取 docId={} docName={} fileType={} mimeType={} 命中解析器={}",
-                    documentDO.getId(), docName, documentDO.getFileType(), mimeType, parser.getParserType());
-
-            // MinerU 仅实现 parseStructured（未覆写 extractText），统一走结构化解析路径
-            Map<String, Object> options = new HashMap<>();
-            options.put("sourceFile", docName);
-            ParsedDocument parsed = parser.parseStructured(fileBytes, mimeType, options);
-            // blocks 非空走 block-aware（表格/列表等结构化切分），否则用拍平文本走 legacy 策略
-            String text = BlockTextRenderer.render(parsed.blocks());
-            long extractDuration = System.currentTimeMillis() - extractStart;
-
-            long chunkStart = System.currentTimeMillis();
-            List<VectorChunk> chunks = structuredChunkingService.chunk(
-                    parsed.blocks(), text, chunkingMode, config, rowsPerChunk);
-            long chunkDuration = System.currentTimeMillis() - chunkStart;
-
-            long embedStart = System.currentTimeMillis();
-            chunkEmbeddingService.embed(chunks, embeddingModel);
-            long embedDuration = System.currentTimeMillis() - embedStart;
-
-            return new ChunkProcessResult(chunks, extractDuration, chunkDuration, embedDuration);
-        } catch (Exception e) {
-            throw new RuntimeException("文档内容提取或分块失败", e);
-        }
-    }
-
-    private record ChunkProcessResult(List<VectorChunk> chunks, long extractDuration, long chunkDuration,
-                                      long embedDuration) {
-    }
-
-    private record ProcessModeConfig(ProcessMode processMode, ChunkingMode chunkingMode, String chunkConfig,
-                                     String pipelineId) {
+    private record ProcessModeConfig(ProcessMode processMode, String ingestionSpec, String pipelineId) {
     }
 
     /**
      * 使用 Pipeline 处理文档，失败直接抛异常，由 runChunkTask 统一处理错误状态
      */
-    private List<VectorChunk> runPipelineProcess(KnowledgeDocumentDO documentDO) {
+    private List<EmbeddedChunk> runPipelineProcess(KnowledgeDocumentDO documentDO,
+                                                   KnowledgeBaseDO kbDO,
+                                                   VectorTarget target) {
         String docId = String.valueOf(documentDO.getId());
         String pipelineId = documentDO.getPipelineId();
 
@@ -401,22 +340,14 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
             throw new IllegalStateException("Pipeline模式下Pipeline ID为空：docId=" + docId);
         }
 
-        KnowledgeBaseDO kbDO = knowledgeBaseMapper.selectById(documentDO.getKbId());
-
         PipelineDefinition pipelineDef = ingestionPipelineService.getDefinition(pipelineId);
-
-        byte[] fileBytes;
-        try (InputStream is = fileStorageService.openStream(documentDO.getFileUrl())) {
-            fileBytes = is.readAllBytes();
-        } catch (Exception e) {
-            throw new RuntimeException("读取文件内容失败：docId=" + docId, e);
-        }
+        byte[] fileBytes = readFileBytes(documentDO);
 
         IngestionContext context = IngestionContext.builder()
                 .taskId(docId)
                 .pipelineId(pipelineId)
                 .rawBytes(fileBytes)
-                .mimeType(documentDO.getFileType())
+                .vectorTarget(target)
                 .vectorSpaceId(VectorSpaceId.builder()
                         .logicalName(kbDO.getCollectionName())
                         .build())
@@ -429,7 +360,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
             throw new RuntimeException("Pipeline执行失败：" + result.getError().getMessage(), result.getError());
         }
 
-        List<VectorChunk> chunks = result.getChunks();
+        List<EmbeddedChunk> chunks = result.getChunks();
         if (chunks == null || chunks.isEmpty()) {
             log.warn("Pipeline执行完成但未产生分块：docId={}", docId);
             return List.of();
@@ -477,7 +408,6 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
             throw new ClientException("文档正在分块中，无法删除");
         }
 
-        knowledgeChunkService.deleteByDocId(docId);
         scheduleService.deleteByDocId(docId);
         chunkLogMapper.delete(Wrappers.lambdaQuery(KnowledgeDocumentChunkLogDO.class)
                 .eq(KnowledgeDocumentChunkLogDO::getDocId, docId));
@@ -486,8 +416,9 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
         documentDO.setUpdatedBy(UserContext.getUsername());
         documentMapper.deleteById(documentDO);
 
-        String collectionName = resolveCollectionName(documentDO.getKbId());
-        vectorStoreService.deleteDocumentVectors(collectionName, docId);
+        // 一次调用覆盖全部落点：关系库块与向量都在扇出里，未来加索引后端也自动跟随
+        KnowledgeBaseDO kbDO = knowledgeBaseMapper.selectById(documentDO.getKbId());
+        chunkIndexWriter.deleteDocument(vectorTargetResolver.resolve(kbDO), documentRef(documentDO));
         deleteStoredFileQuietly(documentDO);
         bizChangeLogContext.put(docId, before, null);
     }
@@ -496,7 +427,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
     public KnowledgeDocumentVO get(String docId) {
         KnowledgeDocumentDO documentDO = documentMapper.selectById(docId);
         Assert.notNull(documentDO, () -> new ClientException("文档不存在"));
-        return BeanUtil.toBean(documentDO, KnowledgeDocumentVO.class);
+        return toVO(documentDO);
     }
 
     @Override
@@ -537,10 +468,8 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
             updateWrapper.set(KnowledgeDocumentDO::getProcessMode, processMode.getValue());
 
             if (ProcessMode.CHUNK == processMode) {
-                ChunkingMode chunkingMode = ChunkingMode.fromValue(requestParam.getChunkStrategy());
-                String chunkConfig = validateAndNormalizeChunkConfig(chunkingMode, requestParam.getChunkConfig());
-                updateWrapper.set(KnowledgeDocumentDO::getChunkStrategy, chunkingMode.getValue());
-                updateWrapper.setSql("chunk_config = CAST({0} AS JSON)", chunkConfig);
+                String spec = ingestionSpecCodec.normalize(requestParam.getIngestionSpec());
+                updateWrapper.setSql("ingestion_spec = CAST({0} AS jsonb)", spec);
                 updateWrapper.set(KnowledgeDocumentDO::getPipelineId, null);
             } else {
                 if (!StringUtils.hasText(requestParam.getPipelineId())) {
@@ -552,8 +481,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
                     throw new ClientException("指定的Pipeline不存在: " + requestParam.getPipelineId());
                 }
                 updateWrapper.set(KnowledgeDocumentDO::getPipelineId, requestParam.getPipelineId());
-                updateWrapper.set(KnowledgeDocumentDO::getChunkStrategy, null);
-                updateWrapper.set(KnowledgeDocumentDO::getChunkConfig, null);
+                updateWrapper.set(KnowledgeDocumentDO::getIngestionSpec, null);
             }
         }
 
@@ -624,7 +552,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
                 .orderByDesc(KnowledgeDocumentDO::getCreateTime);
 
         IPage<KnowledgeDocumentVO> result = documentMapper.selectPage(pageParam, queryWrapper)
-                .convert(each -> BeanUtil.toBean(each, KnowledgeDocumentVO.class));
+                .convert(this::toVO);
 
         List<String> docIds = result.getRecords().stream()
                 .map(KnowledgeDocumentVO::getId)
@@ -633,6 +561,21 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
         result.getRecords().forEach(vo -> vo.setChunksEdited(editedDocIds.contains(vo.getId())));
 
         return result;
+    }
+
+    /**
+     * DO → VO：摄取配置经 codec 归一化后再出参
+     * <p>
+     * 库里可能留着旧构建写下的 {@code Integer.MAX_VALUE}（整篇不分块的领域内部哨兵），
+     * 而线路上的约定是 {@code -1}。归一化放在出参这一层，旧行不刷库也能正确回显；
+     * 列为空表示"走默认"，这个语义要留着，所以空值不在此处物化成一份显式 JSON
+     */
+    private KnowledgeDocumentVO toVO(KnowledgeDocumentDO documentDO) {
+        KnowledgeDocumentVO vo = BeanUtil.toBean(documentDO, KnowledgeDocumentVO.class);
+        if (StringUtils.hasText(documentDO.getIngestionSpec())) {
+            vo.setIngestionSpec(ingestionSpecCodec.write(ingestionSpecCodec.read(documentDO.getIngestionSpec())));
+        }
+        return vo;
     }
 
     private Set<String> findEditedDocIds(List<String> docIds) {
@@ -654,7 +597,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
             return Collections.emptyList();
         }
 
-        int size = Math.min(Math.max(limit, 1), 20);
+        int size = Math.clamp(limit, 1, 20);
         Page<KnowledgeDocumentDO> mpPage = new Page<>(1, size);
         LambdaQueryWrapper<KnowledgeDocumentDO> qw = new LambdaQueryWrapper<KnowledgeDocumentDO>()
                 .eq(KnowledgeDocumentDO::getDeleted, 0)
@@ -725,24 +668,16 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
         String collectionName = kbDO.getCollectionName();
 
         // 启用时：embed 耗时较长，在事务外提前执行，避免长事务占用连接
-        List<VectorChunk> vectorChunks = Collections.emptyList();
+        List<EmbeddedChunk> vectorChunks = Collections.emptyList();
         if (enabled) {
-            List<KnowledgeChunkVO> chunks = knowledgeChunkService.listByDocId(docId);
-            vectorChunks = chunks.stream().map(each ->
-                    VectorChunk.builder()
-                            .chunkId(each.getId())
-                            .content(each.getContent())
-                            .index(each.getChunkIndex())
-                            .build()
-            ).toList();
+            // 向量文本取库里那份，不用展示文本重新组装——否则章节路径与表格 KV 渲染会静默丢失
+            vectorChunks = knowledgeChunkService.embedPersistedChunks(docId, vectorTargetResolver.resolve(kbDO));
             if (CollUtil.isEmpty(vectorChunks)) {
                 log.warn("启用文档时未找到任何 Chunk，仅更新启用状态并跳过向量重建，docId={}", docId);
-            } else {
-                chunkEmbeddingService.embed(vectorChunks, kbDO.getEmbeddingModel());
             }
         }
 
-        final List<VectorChunk> finalVectorChunks = vectorChunks;
+        final List<EmbeddedChunk> finalEmbeddedChunks = vectorChunks;
         transactionOperations.executeWithoutResult(status -> {
             documentDO.setEnabled(targetEnabled);
             documentDO.setUpdatedBy(UserContext.getUsername());
@@ -752,8 +687,8 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
 
             if (!enabled) {
                 vectorStoreService.deleteDocumentVectors(collectionName, docId);
-            } else if (CollUtil.isNotEmpty(finalVectorChunks)) {
-                vectorStoreService.indexDocumentChunks(collectionName, docId, finalVectorChunks);
+            } else if (CollUtil.isNotEmpty(finalEmbeddedChunks)) {
+                vectorStoreService.indexDocumentChunks(collectionName, docId, finalEmbeddedChunks);
             }
         });
         bizChangeLogContext.put(docId, before, documentMapper.selectById(docId));
@@ -815,10 +750,6 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
                 : totalDuration - extract - chunk - embed - persist;
     }
 
-    private String resolveCollectionName(String kbId) {
-        return knowledgeBaseMapper.selectById(kbId).getCollectionName();
-    }
-
     private boolean isScheduleEnabled(SourceType sourceType, KnowledgeDocumentUploadRequest request) {
         return SourceType.URL == sourceType && Boolean.TRUE.equals(request.getScheduleEnabled());
     }
@@ -836,7 +767,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
             throw new ClientException("定时表达式不能为空");
         }
         try {
-            if (CronScheduleHelper.isIntervalLessThan(scheduleCron, new Date(), scheduleProperties.getMinIntervalSeconds())) {
+            if (CronScheduleHelper.isIntervalLessThan(scheduleCron, new java.util.Date(), scheduleProperties.getMinIntervalSeconds())) {
                 throw new ClientException("定时周期不能小于 " + scheduleProperties.getMinIntervalSeconds() + " 秒");
             }
         } catch (IllegalArgumentException e) {
@@ -847,9 +778,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
     private ProcessModeConfig resolveProcessModeConfig(KnowledgeDocumentUploadRequest request) {
         ProcessMode processMode = ProcessMode.normalize(request.getProcessMode());
         if (ProcessMode.CHUNK == processMode) {
-            ChunkingMode chunkingMode = ChunkingMode.fromValue(request.getChunkStrategy());
-            String chunkConfig = validateAndNormalizeChunkConfig(chunkingMode, request.getChunkConfig());
-            return new ProcessModeConfig(processMode, chunkingMode, chunkConfig, null);
+            return new ProcessModeConfig(processMode, ingestionSpecCodec.normalize(request.getIngestionSpec()), null);
         } else {
             if (!StringUtils.hasText(request.getPipelineId())) {
                 throw new ClientException("使用Pipeline模式时，必须指定Pipeline ID");
@@ -859,7 +788,7 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
             } catch (Exception e) {
                 throw new ClientException("指定的Pipeline不存在: " + request.getPipelineId());
             }
-            return new ProcessModeConfig(processMode, null, null, request.getPipelineId());
+            return new ProcessModeConfig(processMode, null, request.getPipelineId());
         }
     }
 
@@ -871,73 +800,12 @@ public class KnowledgeDocumentServiceImpl implements KnowledgeDocumentService {
         return remoteFileFetcher.fetchAndStore(bucketName, sourceLocation);
     }
 
-    private String validateAndNormalizeChunkConfig(ChunkingMode mode, String chunkConfigJson) {
-        if (!StringUtils.hasText(chunkConfigJson)) {
-            return null;
-        }
-        if (mode == null) {
-            mode = ChunkingMode.STRUCTURE_AWARE;
-        }
-        String json = chunkConfigJson.trim();
-        Map<String, Object> config;
-        try {
-            config = objectMapper.readValue(json, new TypeReference<>() {
-            });
-        } catch (Exception e) {
-            throw new ClientException("分块参数JSON格式不合法");
-        }
-        for (String key : mode.getDefaultConfig().keySet()) {
-            if (!config.containsKey(key)) {
-                throw new ClientException("分块参数缺少必要字段: " + key);
-            }
-        }
-        return json;
-    }
-
-    private Map<String, Object> parseChunkConfig(String json) {
-        if (!StringUtils.hasText(json)) {
-            return Map.of();
-        }
-        try {
-            return objectMapper.readValue(json, new TypeReference<>() {
-            });
-        } catch (Exception e) {
-            log.warn("分块参数解析失败: {}", json, e);
-            return Map.of();
-        }
-    }
-
-    /**
-     * 从配置 map 读整数自由键，缺失 / 非法返回 null（交由下游取默认）
-     */
-    private static Integer readInt(Map<String, Object> config) {
-        Object v = config.get("rowsPerChunk");
-        if (v instanceof Number num) {
-            return num.intValue();
-        }
-        if (v instanceof String str && StringUtils.hasText(str)) {
-            try {
-                return Integer.parseInt(str.trim());
-            } catch (NumberFormatException ignored) {
-                return null;
-            }
-        }
-        return null;
-    }
-
-    /**
-     * 从配置 map 读字符串自由键，缺失返回 null
-     */
-    private static String readString(Map<String, Object> config) {
-        Object v = config.get("excelParser");
-        return v == null ? null : v.toString();
-    }
 
     @Override
     public String preview(String docId) {
         KnowledgeDocumentDO documentDO = documentMapper.selectById(docId);
         Assert.notNull(documentDO, () -> new ClientException("文档不存在"));
-        if (!"markdown".equalsIgnoreCase(documentDO.getFileType())) {
+        if (DisplayType.from(documentDO.getFileType()) != DisplayType.MARKDOWN) {
             throw new ClientException("仅支持预览 markdown 格式文档");
         }
         try (InputStream in = fileStorageService.openStream(documentDO.getFileUrl())) {
